// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/components/AllRead.tsx > should render itself & its children - no filters 1`] = `
<div>
  <div
    class="flex flex-1 flex-col items-center justify-center min-h-screen"
  >
    <div
      class="css-1rd5nai"
    >
      <div
        class="css-1ma91a4"
      >
        <span
          class="text-5xl"
        >
          <span>
            <img
              alt="🎊"
              class="emoji"
              draggable="false"
              src="/mock/images/assets/1f38a.svg"
            />
          </span>
        </span>
        <span
          class="text-xl font-semibold"
        >
          No new notifications
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/AllRead.tsx > should render itself & its children - with filters 1`] = `
<div>
  <div
    class="flex flex-1 flex-col items-center justify-center min-h-screen"
  >
    <div
      class="css-1rd5nai"
    >
      <div
        class="css-1ma91a4"
      >
        <span
          class="text-5xl"
        >
          <span>
            <img
              alt="🎊"
              class="emoji"
              draggable="false"
              src="/mock/images/assets/1f38a.svg"
            />
          </span>
        </span>
        <span
          class="text-xl font-semibold"
        >
          No new filtered notifications
        </span>
      </div>
    </div>
  </div>
</div>
`;
